Bug fix: Wraps image text to fit inside fviewport

--- a/src/app/home/pages/HooksPage/HooksPage.module.scss
+++ b/src/app/home/pages/HooksPage/HooksPage.module.scss
@@ -1,3 +1,10 @@
 .planCountPopover {
   cursor: pointer;
 }
+
+.truncatedImage {
+  width: 240px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
